--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <div align="center">
-    <h1>Waaw, Congratulations Anjali Bagde ...</h1>
+    <h1>This is test page for Apache</h1>
     <h2>This application was deployed using AWS CodeDeploy  .............................</h2>
     <p>For next steps, read the <a href="http://aws.amazon.com/documentation/codedeploy">AWS CodeDeploy Documentation</a>.</p>
   </div>
